testsuite/poke.pkl/add-f64-diag-1.pk
/* { dg-do compile } */

var res
  = 1t .+ 1L; /* { dg-error "invalid operand .*" } */
